--- a/Battleships/Battleships.Tests/Battleships.Tests.csproj
+++ b/Battleships/Battleships.Tests/Battleships.Tests.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="Verify" Version="20.4.0" />
     <PackageReference Include="Verify.Xunit" Version="20.4.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -21,10 +22,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Unit\" />
   </ItemGroup>
 
   <ItemGroup>
